[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/HUD/touch/touch.gd" type="Script" id=1]
[ext_resource path="res://Juego/HUD/touch/Imgs/boton-izq.png" type="Texture" id=2]
[ext_resource path="res://Juego/HUD/touch/Imgs/boton-der.png" type="Texture" id=3]
[ext_resource path="res://Juego/HUD/touch/Imgs/boton-salto.png" type="Texture" id=4]
[ext_resource path="res://Juego/HUD/touch/Imgs/boton-A.png" type="Texture" id=5]
[ext_resource path="res://Juego/HUD/touch/Imgs/boton-B.png" type="Texture" id=6]

[node name="touch" type="Node2D"]
script = ExtResource( 1 )

[node name="boton-izq" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 217.0
margin_right = 56.0
margin_bottom = 249.0
texture_normal = ExtResource( 2 )

[node name="boton-dere" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 216.0
margin_right = 133.0
margin_bottom = 249.0
texture_normal = ExtResource( 3 )

[node name="boton-arriba" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 181.0
margin_right = 92.0
margin_bottom = 213.0
texture_normal = ExtResource( 4 )

[node name="boton-A" type="TextureButton" parent="."]
margin_left = 370.0
margin_top = 211.0
margin_right = 402.0
margin_bottom = 243.0
texture_normal = ExtResource( 5 )

[node name="boton-B" type="TextureButton" parent="."]
margin_left = 418.0
margin_top = 211.0
margin_right = 450.0
margin_bottom = 243.0
texture_normal = ExtResource( 6 )
[connection signal="button_down" from="boton-izq" to="." method="_on_botonizq_button_down"]
[connection signal="button_up" from="boton-izq" to="." method="_on_botonizq_button_up"]
[connection signal="button_down" from="boton-dere" to="." method="_on_botondere_button_down"]
[connection signal="button_up" from="boton-dere" to="." method="_on_botondere_button_up"]
[connection signal="button_down" from="boton-arriba" to="." method="_on_botonarriba_button_down"]
[connection signal="button_down" from="boton-A" to="." method="_on_botonA_button_down"]
[connection signal="button_down" from="boton-B" to="." method="_on_botonB_button_down"]
